--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,10 @@
+MathJax.Hub.Config({
+  tex2jax: {
+    inlineMath: [['$','$'], ['\\(','\\)']],
+    processEscapes: true
+  }
+});
+
 <!DOCTYPE HTML>
 <!--
 Prologue by HTML5 UP
@@ -11,4 +18,7 @@ Jekyll integration by Chris Bobbe | chrisbobbe.github.io
 		{{- content -}}
 		{%- include footer.html -%}
 	</body>
-</html>
+</html
+
+
+>
