latest changes to blog

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,3 +1,17 @@
+<script>
+      renderMathInElement(
+          document.getElementById("your post id"),
+          {
+              delimiters: [
+                  {left: "$$", right: "$$", display: true},
+                  {left: "\\[", right: "\\]", display: true},
+                  {left: "$", right: "$", display: false},
+                  {left: "\\(", right: "\\)", display: false}
+              ]
+          }
+      );
+</script>
+
 ---
 layout: default
 ---
