--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,9 +3,9 @@
           document.getElementById("your post id"),
           {
               delimiters: [
-                  {left: "$$", right: "$$", display: true},
+                  {left: "$$", right: "$$", display: false},
                   {left: "\\[", right: "\\]", display: true},
-                  {left: "$", right: "$", display: false},
+                  {left: "$", right: "$", display: true},
                   {left: "\\(", right: "\\)", display: false}
               ]
           }
@@ -30,3 +30,16 @@ layout: default
 	  </div>
 	</article>
 </div>
+
+
+<script>
+  $("script[type='math/tex']").replaceWith(function() {
+      var tex = $(this).text();
+      return katex.renderToString(tex, {displayMode: false});
+  });
+
+  $("script[type='math/tex; mode=display']").replaceWith(function() {
+      var tex = $(this).html();
+      return katex.renderToString(tex.replace(/%.*/g, ''), {displayMode: true});
+  });
+</script>
