--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,3 +16,17 @@ layout: default
 	  </div>
 	</article>
 </div>
+
+<script>
+      renderMathInElement(
+          document.getElementById("your post id"),
+          {
+              delimiters: [
+                  {left: "$$", right: "$$", display: false},
+                  {left: "\\[", right: "\\]", display: true},
+                  {left: "$", right: "$", display: true},
+                  {left: "\\(", right: "\\)", display: false}
+              ]
+          }
+      );
+</script>
