finally fixed latex bugs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,9 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 Jekyll integration by Chris Bobbe | chrisbobbe.github.io
 -->
 
+
+<!-- source of this great latex rendering solution: http://zjuwhw.github.io/2017/06/04/MathJax.html which was recomennded from here: https://stackoverflow.com/questions/26275645/how-to-support-latex-in-github-pages -->
+
 <script type="text/x-mathjax-config">
 MathJax.Hub.Config({
   tex2jax: {
